test/1.2/errors/T_EINTPTRTYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

// bug 9082

/// ERROR EINTPTRTYPE
data uint48 *x;
